Добавляет обертки для деталей отзыва

--- a/index.html
+++ b/index.html
@@ -97,38 +97,44 @@
           <ul class="review__list list">
             <li class="review__item list__item">
               <p class="review__description">Первый раз пришлось оставить нашего котика в гостинице, очень переживали. Администратор Мария каждый день высылала нам фото нашего питомца, рассказывала, как он себя чувствует. И мы и котик остались очень довольны!</p>
-              <cite class="review__author">Валерия Гришаева</cite>
-              <time class="review__time">15 ноября, 2019</time>
+              <div class="review__details">
+                <cite class="review__author">Валерия Гришаева</cite>
+                <time class="review__time">15 ноября, 2019</time>
+              </div>
             </li>
             <li class="review__item list__item">
               <p class="review__description">Гостиницу для питомцев нам посоветовали друзья. Они всегда оставляют здесь своего кота, когда уезжают. В “Котейке” очень хорошо заботятся о питомцах, в гостинице очень чисто. Всем рекомендую! Будем обращаться еще.</p>
-              <cite class="review__author">Екатерина Минаева</cite>
-              <time class="review__time">10 октября, 2019</time>
+              <div class="review__details">
+                <cite class="review__author">Екатерина Минаева</cite>
+                <time class="review__time">10 октября, 2019</time>
+              </div>
             </li>
             <li class="review__item list__item">
               <p class="review__description">Мой кот — настоящая привереда, угодить ему сложно. У меня были особые требования к уходу за ним, и “Котейка” отлично справились. Я часто наблюдал по видео за питомцем со своего телефона, это очень удобно.</p>
-              <cite class="review__author">Павел Нечаев</cite>
-              <time class="review__time">2 августа, 2019</time>
+              <div class="review__details">
+                <cite class="review__author">Павел Нечаев</cite>
+                <time class="review__time">2 августа, 2019</time>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <section class="contacts section">
         <div class="contacts__details">
-          <h2 class="section__header">Как нас найти</h2>
+          <h2 class="section__header contacts__header">Как нас найти</h2>
           <p class="contacts__title">Адрес</p>
-          <p class="contacts__detail">Санкт-Петербург, ул Большая Конюшенная, д 19</p>
+          <p class="contacts__detail">Санкт-Петербург,<br> ул Большая Конюшенная, д 19</p>
           <p class="contacts__title">Режим работы</p>
           <p class="contacts__detail">Ежедневно, с 9:00 до 20:00</p>
           <p class="contacts__title">Телефон</p>
-          <a class="contacts__detail" href="tel:+78003335599">8 (800) 333-55-99</a>
+          <a class="contacts__detail contacts__detail--link" href="tel:+78003335599">8 (800) 333-55-99</a>
           <p class="contacts__title">E-mail</p>
-          <a class="contacts__detail" href="mailto:info@cat-hotel.ru">info@cat-hotel.ru</a>
+          <a class="contacts__detail contacts__detail--link" href="mailto:info@cat-hotel.ru">info@cat-hotel.ru</a>
           <p class="contacts__title">Социальные сети</p>
           <ul class="contacts__social social list">
-            <li class="social__item">Facebook</li>
-            <li class="social__item">Instagram</li>
-            <li class="social__item">VK</li>
+            <li class="social__item"><span class="visually-hidden">Facebook</span></li>
+            <li class="social__item"><span class="visually-hidden">Instagram</span></li>
+            <li class="social__item"><span class="visually-hidden">VK</span></li>
           </ul>
         </div>
         <div class="contacts__map map">
