Добавляет классы-модификаторы

--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
       <section class="advantages section">
         <h2 class="section__header">Почему мы?</h2>
         <ul class="advantages__list list">
-          <li class="advantages__item list__item">
+          <li class="advantages__item advantages__item--temperature list__item">
             <h3 class="advantages__title list__title">Комфортная температура</h3>
             <p class="advantages__description">Во всех номерах поддерживается комфортная температура в пределах 23 - 25 градусов. В каждом номере можно дополнительно отрегулировать температуру.</p>
           </li>
-          <li class="advantages__item list__item">
+          <li class="advantages__item advantages__item--cctv list__item">
             <h3 class="advantages__title list__title">Видеонаблюдение</h3>
             <p class="advantages__description">Мы предоставляем доступ в нашу систему. Вы сможете следить за своим питомцем со своего смартфона или компьютера.</p>
           </li>
-          <li class="advantages__item list__item">
+          <li class="advantages__item advantages__item--taxi list__item">
             <h3 class="advantages__title list__title">Услуги Зоотакси</h3>
             <p class="advantages__description">Мы приедем за вашим питомцем в любой район Санкт-Петербурга.</p>
           </li>
-          <li class="advantages__item list__item">
+          <li class="advantages__item advantages__item--food list__item">
             <h3 class="advantages__title list__title">Сбалансированное питание</h3>
             <p class="advantages__description">Вы можете привезти свой корм или доверить рацион своего питомца нашим профессионалам.</p>
           </li>
-          <li class="advantages__item list__item">
+          <li class="advantages__item advantages__item--cat list__item">
             <h3 class="advantages__title list__title">Ежедневные прогулки</h3>
             <p class="advantages__description">По вашему желанию мы выгуливаем вашего питомца два раза в день на специализированной закрытой территории.</p>
           </li>
-          <li class="advantages__item list__item">
+          <li class="advantages__item advantages__item--hand list__item">
             <h3 class="advantages__title list__title">Лучшие ветеринары</h3>
             <p class="advantages__description">В гостинице 24 часа дежурит ветеринарный врач, который окажет любую помощь в случае необходимости.</p>
           </li>
@@ -93,31 +93,29 @@
       </section>
       <section class="review section">
         <h2 class="section__header">Отзывы</h2>
-        <div class="review__wrapper">
-          <ul class="review__list list">
-            <li class="review__item list__item">
-              <p class="review__description">Первый раз пришлось оставить нашего котика в гостинице, очень переживали. Администратор Мария каждый день высылала нам фото нашего питомца, рассказывала, как он себя чувствует. И мы и котик остались очень довольны!</p>
-              <div class="review__details">
-                <cite class="review__author">Валерия Гришаева</cite>
-                <time class="review__time">15 ноября, 2019</time>
-              </div>
-            </li>
-            <li class="review__item list__item">
-              <p class="review__description">Гостиницу для питомцев нам посоветовали друзья. Они всегда оставляют здесь своего кота, когда уезжают. В “Котейке” очень хорошо заботятся о питомцах, в гостинице очень чисто. Всем рекомендую! Будем обращаться еще.</p>
-              <div class="review__details">
-                <cite class="review__author">Екатерина Минаева</cite>
-                <time class="review__time">10 октября, 2019</time>
-              </div>
-            </li>
-            <li class="review__item list__item">
-              <p class="review__description">Мой кот — настоящая привереда, угодить ему сложно. У меня были особые требования к уходу за ним, и “Котейка” отлично справились. Я часто наблюдал по видео за питомцем со своего телефона, это очень удобно.</p>
-              <div class="review__details">
-                <cite class="review__author">Павел Нечаев</cite>
-                <time class="review__time">2 августа, 2019</time>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <ul class="review__list list">
+          <li class="review__item list__item">
+            <p class="review__description">Первый раз пришлось оставить нашего котика в гостинице, очень переживали. Администратор Мария каждый день высылала нам фото нашего питомца, рассказывала, как он себя чувствует. И мы и котик остались очень довольны!</p>
+            <div class="review__details">
+              <cite class="review__author">Валерия Гришаева</cite>
+              <time class="review__time">15 ноября, 2019</time>
+            </div>
+          </li>
+          <li class="review__item list__item">
+            <p class="review__description">Гостиницу для питомцев нам посоветовали друзья. Они всегда оставляют здесь своего кота, когда уезжают. В “Котейке” очень хорошо заботятся о питомцах, в гостинице очень чисто. Всем рекомендую! Будем обращаться еще.</p>
+            <div class="review__details">
+              <cite class="review__author">Екатерина Минаева</cite>
+              <time class="review__time">10 октября, 2019</time>
+            </div>
+          </li>
+          <li class="review__item list__item">
+            <p class="review__description">Мой кот — настоящая привереда, угодить ему сложно. У меня были особые требования к уходу за ним, и “Котейка” отлично справились. Я часто наблюдал по видео за питомцем со своего телефона, это очень удобно.</p>
+            <div class="review__details">
+              <cite class="review__author">Павел Нечаев</cite>
+              <time class="review__time">2 августа, 2019</time>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="contacts section">
         <div class="contacts__details">
@@ -132,9 +130,9 @@
           <a class="contacts__detail contacts__detail--link" href="mailto:info@cat-hotel.ru">info@cat-hotel.ru</a>
           <p class="contacts__title">Социальные сети</p>
           <ul class="contacts__social social list">
-            <li class="social__item"><span class="visually-hidden">Facebook</span></li>
-            <li class="social__item"><span class="visually-hidden">Instagram</span></li>
-            <li class="social__item"><span class="visually-hidden">VK</span></li>
+            <li class="social__item social__item--facebook"><span class="visually-hidden">Facebook</span></li>
+            <li class="social__item social__item--instagram"><span class="visually-hidden">Instagram</span></li>
+            <li class="social__item social__item--vk"><span class="visually-hidden">VK</span></li>
           </ul>
         </div>
         <div class="contacts__map map">
