--- a/index.html
+++ b/index.html
@@ -61,32 +61,47 @@
         <h2 class="section__header">Номера</h2>
         <div class="rooms__wrapper">
           <ul class="rooms__list list">
-            <li class="rooms__item list__item">
-              <h3 class="rooms__title list__title">Эконом плюс</h3>
-              <ul class="rooms__description-list list">
-                <li class="rooms__description-item">Площадь - 0,90 м2</li>
-                <li class="rooms__description-item">Размеры (ШхГхВ) — 90х100х180 см</li>
-                <li class="rooms__description-item">Цена за сутки: 200₽</li>
-              </ul>
-              <button class="btn btn--booking btn--room-booking">Забронировать</button>
+            <li class="rooms__item">
+              <div class="rooms__item__image">
+                <img src="img/economy.png" width="600" height="404" alt="Номер Эконом плюс для вашего любимца">
+              </div>
+              <div class="rooms__description rooms__item__economy list__item">
+                <h3 class="rooms__title list__title">Эконом плюс</h3>
+                <ul class="rooms__description-list list">
+                  <li class="rooms__description-item">Площадь - 0,90 м2</li>
+                  <li class="rooms__description-item">Размеры (ШхГхВ) — 90х100х180 см</li>
+                  <li class="rooms__description-item">Цена за сутки: 200₽</li>
+                </ul>
+                <button class="btn btn--booking btn--room-booking">Забронировать</button><div class="test">
+              </div> 
             </li>
-            <li class="rooms__item list__item display-hidden">
-              <h3 class="rooms__title list__title">Комфорт</h3>
-              <ul class="rooms__description-list list">
-                <li class="rooms__description-item">Площадь - 1,13 м2</li>
-                <li class="rooms__description-item">Размеры (ШхГхВ) - 100х125х180 см</li>
-                <li class="rooms__description-item">Цена за сутки: 250₽</li>
-              </ul>
-              <button class="btn btn--booking btn--room-booking">Забронировать</button>
+            <li class="rooms__item visually-hidden">
+              <div class="rooms__item__image">
+                <img src="img/comfort.png" width="600" height="404" alt="Номер Комфорт для вашего любимца">
+              </div>
+              <div class="rooms__description rooms__item__comfort list__item">
+                <h3 class="rooms__title list__title">Комфорт</h3>
+                <ul class="rooms__description-list list">
+                  <li class="rooms__description-item">Площадь - 1,13 м2</li>
+                  <li class="rooms__description-item">Размеры (ШхГхВ) - 100х125х180 см</li>
+                  <li class="rooms__description-item">Цена за сутки: 250₽</li>
+                </ul>
+                <button class="btn btn--booking btn--room-booking">Забронировать</button><div class="test">
+              </div> 
             </li>
-            <li class="rooms__item list__item display-hidden">
-              <h3 class="rooms__title list__title">Сьют</h3>
-              <ul class="rooms__description-list list">
-                <li class="rooms__description-item">Площадь - 1,56 м2</li>
-                <li class="rooms__description-item">Размеры (ШхГхВ) - 125х125х180 см</li>
-                <li class="rooms__description-item">Цена за сутки: 350₽</li>
-              </ul>
-              <button class="btn btn--booking btn--room-booking">Забронировать</button>
+            <li class="rooms__item visually-hidden">
+              <div class="rooms__item__image">
+                <img src="img/suit.png" width="600" height="404" alt="Номер Сьют для вашего любимца">
+              </div>
+              <div class="rooms__description rooms__item__suit list__item">
+                <h3 class="rooms__title list__title">Сьют</h3>
+                <ul class="rooms__description-list list">
+                  <li class="rooms__description-item">Площадь - 1,56 м2</li>
+                  <li class="rooms__description-item">Размеры (ШхГхВ) - 125х125х180 см</li>
+                  <li class="rooms__description-item">Цена за сутки: 350₽</li>
+                </ul>
+                <button class="btn btn--booking btn--room-booking">Забронировать</button><div class="test">
+              </div> 
             </li>
           </ul>
         </div>
