Добавляет фоновые изображения для Преимуществ и отзывов

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button class="btn btn--booking">Забронировать</button>
       </section>
       <section class="advantages section">
+        <img class="advantages__img" src="img/paw_adv.svg" width="367" height="314">
         <h2 class="section__header">Почему мы?</h2>
         <ul class="advantages__list list">
           <li class="advantages__item advantages__item--temperature list__item">
@@ -107,6 +108,7 @@
         </div>
       </section>
       <section class="review section">
+        <img class="review__img" src="img/paw.svg" width="312" height="267">
         <h2 class="section__header">Отзывы</h2>
         <ul class="review__list list">
           <li class="review__item list__item">
