Добавляет верхнеуровневую разметку

--- a/catalog.html
+++ b/catalog.html
@@ -22,6 +22,15 @@
     </header>
 
     <main class="page-main">
+      <h2 class="section__header catalog__header">Наши номера</h2>
+      <div class="catalog__columns">
+        <section class="catalog__filter"></section>
+        <section class="catalog__inner">
+          <h3 class="visually-hidden">Карточки номеров</h3>
+          <ul class="catalog__list list"></ul>
+        </section>
+      </div>
+      <section class="advertising_banner"></section>
     </main>
 
     <footer class="page-footer">
